# Tasks

./: README.md
ATM/: CMakeLists.txt  main.cxx
ATM/include/: atm.h
ATM/sql/: create_data.sql  create_tabel.sql  create_user_db.sql
ATM/src/: ATM.cpp  ATM_Interface.cpp  ATM_MSG.cpp
RANSAC/: CMakeLists.txt  Line.cpp  Line.h  RANSAC.gitignore  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.txt
UTest_string/: CMakeLists.txt  README.md  utest_string_h.cpp
UTest_string/include/: string_t.h
UTest_string/src/: string_t.c
udpServer/: CMakeLists.txt  README.md  client.ui  main.cpp  server.ui  udpserver.cpp  udpserver.h
